# zuul_service_setup

./: .gitignore  README.md  Readme.rst  beautify.py  db.py  ff.py  jen.py  layout.yaml  patt.py  plugins.txt  pyproject.toml  requirements.txt  script.py  setup.cfg  zuul.conf  zuul_conf_merger.conf
folder/: .bashrc  config.xml  config.yaml  hudson.plugins.gearman.GearmanPluginConfig.xml  layout.yaml  plugins.txt
src/zuul_setup/: config.yaml  gerrit_rest.py  layout.yaml  query.sql  utilites.py  zuul.conf  zuul_conf_merger.conf  zuul_setup.py
