[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "zuul_setup"
version = "1.0"
authors = [
  { name="Santoshkumar Vagga", email="santoshkumar.vagga@nokia.com" },
]
description = "Automation of zuul service setup on Linsee servers"
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Tracker" = "https://github.com/pypa/sampleproject/issues"