[metadata]
name = zuul_setup
version = 1.0
description = Automation of zuul service setup on Linsee servers
long_description = file: README.rst
author = Santoshkumar Vagga
author_email = santoshkumar.vagga@nokia.com

[options]
packages = find:
package_dir =
    =src
include_package_data = True
install_requires =
   api4jenkins
   PyYAML
   paramiko
   scp

[options.packages.find]
where=src
